k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: switht-msa-ingress
  namespace: tweety
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - "server.switht.co.kr"
      secretName: switht-co.kr-tls
  rules:
    - host: server.switht.co.kr
      http:
        paths:
          - path: /member-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: member-service
                port:
                  number: 80
          - path: /lecture-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: lecture-service
                port:
                  number: 80
          - path: /payment-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
